WHO-14 CORS config and pther updates